Responsive Fixes (navbar, fontsize, feature) 1. Deleted Unwanted Images 2. Increased Logo Size on Navbar 3. Fixed Images in the Features Section 4. Font Size Resposive 5. Centered About Us heading on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
-/*!
+/*
 * Start Bootstrap - Agency v6.0.2 (https://startbootstrap.com/template-overviews/agency)
 * Copyright 2013-2020 Start Bootstrap
 * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-agency/blob/master/LICENSE)
 */
-/*!
+/*
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
@@ -4396,6 +4396,8 @@ input[type=button].btn-block {
 .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
   color: #fff;
 }
+
+
 
 .card {
   position: relative;
@@ -10092,15 +10094,15 @@ img::-moz-selection {
 }
 
 #mainNav {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background-color: #212529;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.75rem;
-  color: #fff;
+  color: black;
   text-transform: uppercase;
   background-color: #fed136;
   border: 0;
@@ -10113,7 +10115,7 @@ img::-moz-selection {
   text-transform: uppercase;
 }
 #mainNav .navbar-brand img {
-  height: 1.5rem;
+  height: 2.8rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -10151,7 +10153,7 @@ img::-moz-selection {
   }
   #mainNav.navbar-shrink .navbar-brand svg,
 #mainNav.navbar-shrink .navbar-brand img {
-    height: 3rem;
+    height: 3.5rem;
   }
   #mainNav .navbar-nav .nav-item {
     margin-right: 1rem;
@@ -10713,7 +10715,42 @@ section#contact form#contactForm :-ms-input-placeholder {
  
 }
 
+@media (max-width:992px) {
+  .carousel-item.active, .carousel-item-next, .carousel-item-prev{
+    margin-top:4rem;
+  }
 
+  h1, h2{
+    font-size: 1.8rem !important; 
+  }
+
+  h5{
+    font-size: 0.8rem;
+  }
+  .text-success{
+    text-align: center;
+  }
+
+  .card-feature-img-top{
+    height: 42vw;
+  }
+
+  .card-text{
+    font-size: 12px;
+  }
+
+  #about{
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    text-align: justify;
+    font-size: 17px
+  }
+
+  .card-deck{
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+  }
+}
 
 
 
